--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
 # Config file for automatic testing at travis-ci.org
 language: python
 
+before_install:
+ - sudo apt-get install -qq python-numpy python-scipy
+
 python:
 - "3.4"
 - "3.3"
-- "2.7"
+- "2.7_with_system_site_packages"
 install:
 - pip install coveralls
 - pip install -r requirements.txt
