--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@
 language: python
 
 before_install:
- - sudo apt-get install -qq python-numpy python-scipy
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo apt-get -qq update
+  - sudo apt-get install -qq python-numpy python-scipy
 
 python:
 - "3.4"
@@ -13,6 +15,6 @@ install:
 - pip install -r requirements.txt
 
 # command to run tests, e.g. python setup.py test
-script: coverage run --source hope setup.py test
+script: coverage run --source abcpmc setup.py test
 after_success:
     coveralls
