--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,11 @@
 language: python
 
 before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get -qq update
   - sudo apt-get install -qq python-numpy python-scipy
 
 python:
-- "3.4"
-- "3.3"
+- "3.4_with_system_site_packages"
+- "3.3_with_system_site_packages"
 - "2.7_with_system_site_packages"
 install:
 - pip install coveralls
