--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,21 @@
-# Config file for automatic testing at travis-ci.org
 language: python
-
-before_install:
-  - sudo apt-get install -qq python-numpy python-scipy
-
 python:
-- "2.7_with_system_site_packages"
-
+  - "2.7"
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -qq libatlas-dev libatlas-base-dev liblapack-dev gfortran
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+  - conda update --yes conda
+  - travis_retry conda install --yes python=$TRAVIS_PYTHON_VERSION pip numpy scipy
 install:
-- pip install coveralls
-- pip install -r requirements.txt
-
+  - travis_retry pip install coveralls
+  - travis_retry pip install -r requirements.txt
+  - travis_retry python setup.py dev
 # command to run tests, e.g. python setup.py test
 script: coverage run --source abcpmc setup.py test
 after_success:
     coveralls
+  
